5-27-19
- hardware breakpoints/watchpoints work on multithreaded programs
- much more reliable exception handling, guarded by locks instead of being
racy
- Ctrl-C sends SIGINT to debuggee instead of just suspending it now, same with
cmdfunc_detach
- iosdbg prompt shouldn't duplicate anymore
- return CMD_QUIT in cmdfunc_quit instead of exit(0)

5-21-19
- can use hex in count argument for memory find

5-13-19
- simulate user commands when needed
- add 'interrupt' command

5-12-19
- asprintf --> concat
- fixed up memutils.c
- parse_args --> parse_and_create_args

5-11-19
- fixing more memory leaks
- put command line processing in its own file, preparing for user-defined
commands

5-9-19
- free used args, fixing memory leaks

5-8-19
- another completer bug fixed, was confused when commands and arguments were
the same

5-7-19
- support for tab command completion in the help command and re-adjusted help cmd regex to agree with this change
- help command shows all top level commands when no arguments are provided
commands
- can run shell commands within debugger by putting '!' at beginning of the
input line

5-6-19
- commands which don't have anything to audit shouldn't have audit functions

5-5-19
- add macros that wrap arguments to create_(parent|child)_cmd for clarity
- parse_expr renamed to eval_expr

5-4-19
- re-add ability to delete all breakpoints/watchpoints
- iosdbg no longer auto-adds ASLR, instead the ASLR slide is stored in $ASLR
- finished command refactor
- use rl_display_match_list for sub-commands in documentation_for_cmd
- renamed commands:
	- regs --> register
	- var --> variable

5-3-19
- new command: memory find

5-2-19
- continuing to refactor commands

4-30-19
- refactoring commands...
- rename break and watch to breakpoint and watchpoint
- fix command completer bug

4-26-19
- rewrote cmdfunc_kill so iosdbg handles this SIGKILL like any other
- improved watchpoint regex
- fixed a horrible, horrible bug with the way I handle command arguments