@@ -97,12 +97,9 @@ enum cmd_error_t cmdfunc_breakpoint_set(struct cmd_args_t *args,
 
     free(location_str);
 
-    if(*error){
-        concat(error, "expression evaluation failed: %s", *error);
+    if(*error)
         return CMD_FAILURE;
-    }
 
-    // TODO let user set on specific thread
     breakpoint_at_address(location, BP_NO_TEMP, BP_ALL_THREADS, error);    
 
     return *error ? CMD_FAILURE : CMD_SUCCESS;
